@@ -27,17 +27,13 @@
 
 extern KSI_CTX *ctx;
 
-#define TEST_USER "anon"
-#define TEST_PASS "anon"
-
+#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1.ksig"
 
 static void preTest(void) {
 	ctx->netProvider->requestCount = 0;
 }
 
 static void testLoadSignatureFromFile(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1.ksig"
-
 	int res;
 	KSI_Signature *sig = NULL;
 
@@ -47,14 +43,9 @@ static void testLoadSignatureFromFile(CuTest *tc) {
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifySignatureNew(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1.ksig"
-#define TEST_EXT_RESPONSE_FILE "resource/tlv/ok-sig-2014-04-30.1-extend_response.tlv"
-
 	int res;
 	KSI_Signature *sig = NULL;
 
@@ -63,27 +54,23 @@ static void testVerifySignatureNew(CuTest *tc) {
 	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
-	res = KSI_CTX_setExtender(ctx, getFullResourcePathUri(TEST_EXT_RESPONSE_FILE), TEST_USER, TEST_PASS);
-	CuAssert(tc, "Unable to set extender file URI.", res == KSI_OK);
+	/* Set the extend response. */
+	KSITest_setFileMockResponse(tc, getFullResourcePath("resource/tlv/ok-sig-2014-04-30.1-extend_response.tlv"));
 
 	res = KSI_verifySignature(ctx, sig);
 	CuAssert(tc, "Unable to verify signature online.", res == KSI_OK);
 
 	KSI_Signature_free(sig);
 
-#undef TEST_SIGNATURE_FILE
-#undef TEST_EXT_RESPONSE_FILE
 }
 
 static void testVerifySignatureWithPublication(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1-extended.ksig"
-
 	int res;
 	KSI_Signature *sig = NULL;
 
 	KSI_ERR_clearErrors(ctx);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-sig-2014-04-30.1-extended.ksig"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_verifySignature(ctx, sig);
@@ -92,19 +79,16 @@ static void testVerifySignatureWithPublication(CuTest *tc) {
 
 	KSI_Signature_free(sig);
 
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifyLegacySignatureAndDoc(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-legacy-sig-2014-06.gtts.ksig"
-
 	int res;
 	char doc[] = "This is a test data file.\x0d\x0a";
 	KSI_Signature *sig = NULL;
 
 	KSI_ERR_clearErrors(ctx);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-legacy-sig-2014-06.gtts.ksig"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_verifyDocument(sig, ctx, doc, strlen(doc));
@@ -114,20 +98,16 @@ static void testVerifyLegacySignatureAndDoc(CuTest *tc) {
 	CuAssert(tc, "Verification did not fail with expected error.", res == KSI_VERIFICATION_FAILURE);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifyLegacyExtendedSignatureAndDoc(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-legacy-sig-2014-06-extended.gtts.ksig"
-
 	int res;
 	char doc[] = "This is a test data file.\x0d\x0a";
 	KSI_Signature *sig = NULL;
 
 	KSI_ERR_clearErrors(ctx);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-legacy-sig-2014-06-extended.gtts.ksig"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_verifyDocument(sig, ctx, doc, strlen(doc));
@@ -137,13 +117,9 @@ static void testVerifyLegacyExtendedSignatureAndDoc(CuTest *tc) {
 	CuAssert(tc, "Verification did not fail with expected error.", res == KSI_VERIFICATION_FAILURE);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testExtractInputHashLegacySignature(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-legacy-sig-2014-06.gtts.ksig"
-
 	int res;
 	char doc[] = "This is a test data file.\x0d\x0a";
 	KSI_Signature *sig = NULL;
@@ -163,7 +139,7 @@ static void testExtractInputHashLegacySignature(CuTest *tc) {
 	CuAssert(tc, "Unable to hash document.", res == KSI_OK && doc_hash != NULL);
 
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-legacy-sig-2014-06.gtts.ksig"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_getDocumentHash(sig, &sig_input_hash);
@@ -173,70 +149,54 @@ static void testExtractInputHashLegacySignature(CuTest *tc) {
 	KSI_Signature_free(sig);
 	KSI_DataHasher_free(hsr);
 	KSI_DataHash_free(doc_hash);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testRFC3161WrongChainIndex(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/nok-legacy-sig-2015-01-chainIndex.gtts"
-
 	int res;
 	KSI_Signature *sig = NULL;
 
 	KSI_ERR_clearErrors(ctx);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/nok-legacy-sig-2015-01-chainIndex.gtts"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_verify(sig, ctx);
 	CuAssert(tc, "Failed to verify valid document", res == KSI_OK);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testRFC3161WrongAggreTime(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/nok-legacy-sig-2015-01-aggretime.gtts"
-
 	int res;
 	KSI_Signature *sig = NULL;
 
 	KSI_ERR_clearErrors(ctx);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/nok-legacy-sig-2015-01-aggretime.gtts"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_verify(sig, ctx);
 	CuAssert(tc, "Failed to verify valid document", res == KSI_VERIFICATION_FAILURE);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testRFC3161WrongInputHash(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/nok-legacy-sig-2015-01-inHash.gtts"
-
 	int res;
 	KSI_Signature *sig = NULL;
 
 	KSI_ERR_clearErrors(ctx);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/nok-legacy-sig-2015-01-inHash.gtts"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_verify(sig, ctx);
 	CuAssert(tc, "Failed to verify valid document", res == KSI_VERIFICATION_FAILURE);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifySignatureWithUserPublication(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1-extended.ksig"
-
 	int res;
 	KSI_Signature *sig = NULL;
 	const char pubStr[] = "AAAAAA-CTOQBY-AAMJYH-XZPM6T-UO6U6V-2WJMHQ-EJMVXR-JEAGID-2OY7P5-XFFKYI-QIF2LG-YOV7SO";
@@ -252,7 +212,7 @@ static void testVerifySignatureWithUserPublication(CuTest *tc) {
 	res = KSI_PublicationData_fromBase32(ctx, pubStr_bad, &pubData_bad);
 	CuAssert(tc, "Unable to parse publication string.", res == KSI_OK && pubData_bad != NULL);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-sig-2014-04-30.1-extended.ksig"), &sig);
 	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_verifyWithPublication(sig, ctx, pubData);
@@ -265,38 +225,29 @@ static void testVerifySignatureWithUserPublication(CuTest *tc) {
 	KSI_PublicationData_free(pubData);
 	KSI_PublicationData_free(pubData_bad);
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifySignatureExtendedToHead(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1-head.ksig"
-#define TEST_EXT_RESPONSE_FILE "resource/tlv/ok-sig-2014-04-30.1-head-extend_response.tlv"
 	int res;
 	KSI_Signature *sig = NULL;
 
 	KSI_ERR_clearErrors(ctx);
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-sig-2014-04-30.1-head.ksig"), &sig);
 	CuAssert(tc, "Signature should have either a calendar auth record or publication", res == KSI_OK && sig != NULL);
 
 	/* Set the extend response. */
-	res = KSI_CTX_setExtender(ctx, getFullResourcePathUri(TEST_EXT_RESPONSE_FILE), TEST_USER, TEST_PASS);
-	CuAssert(tc, "Unable to set extender file URI.", res == KSI_OK);
+	KSITest_setFileMockResponse(tc, getFullResourcePath("resource/tlv/ok-sig-2014-04-30.1-head-extend_response.tlv"));
 
 	res = KSI_Signature_verifyOnline(sig, ctx);
 	CuAssert(tc, "Signature should verify", res == KSI_OK);
 
 	KSI_Signature_free(sig);
 
-#undef TEST_SIGNATURE_FILE
-#undef TEST_EXT_RESPONSE_FILE
 }
 
 
 static void testSignatureSigningTime(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1.ksig"
-
 	int res;
 	KSI_Signature *sig = NULL;
 	KSI_Integer *sigTime = NULL;
@@ -315,14 +266,31 @@ static void testSignatureSigningTime(CuTest *tc) {
 	CuAssert(tc, "Unexpected signature signing time.", utc == 1398866256);
 
 	KSI_Signature_free(sig);
+}
 
-#undef TEST_SIGNATURE_FILE
+static void testSignatureSigningTimeNoCalendarChain(CuTest *tc) {
+	int res;
+	KSI_Signature *sig = NULL;
+	KSI_Integer *sigTime = NULL;
+	KSI_uint64_t utc = 0;
+
+	KSI_ERR_clearErrors(ctx);
+
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-sig-2014-04-30.1-only_aggr.ksig"), &sig);
+	CuAssert(tc, "Unable to read signature containing only aggregation chains from file.", res == KSI_OK && sig != NULL);
+
+	res = KSI_Signature_getSigningTime(sig, &sigTime);
+	CuAssert(tc, "Unable to get signing time from signature containing only aggregation chains.", res == KSI_OK && sigTime != NULL);
+
+	utc = KSI_Integer_getUInt64(sigTime);
+
+	CuAssert(tc, "Unexpected signature signing time.", utc == 1398866256);
+
+	KSI_Signature_free(sig);
 }
 
 
 static void testSerializeSignature(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1.ksig"
-
 	int res;
 
 	unsigned char in[0x1ffff];
@@ -355,13 +323,9 @@ static void testSerializeSignature(CuTest *tc) {
 
 	KSI_free(out);
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifyDocument(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1.ksig"
-
 	int res;
 
 	unsigned char in[0x1ffff];
@@ -392,13 +356,9 @@ static void testVerifyDocument(CuTest *tc) {
 	CuAssert(tc, "Verification did not fail with expected error.", res == KSI_VERIFICATION_FAILURE);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifyDocumentHash(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-04-30.1.ksig"
-
 	int res;
 
 	unsigned char in[0x1ffff];
@@ -454,19 +414,15 @@ static void testVerifyDocumentHash(CuTest *tc) {
 
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testSignerIdentity(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-2014-08-01.1.ksig"
-
 	int res;
 	const char id_expected[] = "GT :: testA :: 36-test";
 	KSI_Signature *sig = NULL;
 	char *id_actual = NULL;
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/ok-sig-2014-08-01.1.ksig"), &sig);
 	CuAssert(tc, "Unable to load signature", res == KSI_OK && sig != NULL);
 
 	res = KSI_Signature_getSignerIdentity(sig, &id_actual);
@@ -477,28 +433,21 @@ static void testSignerIdentity(CuTest *tc) {
 	KSI_Signature_free(sig);
 	KSI_free(id_actual);
 
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testSignatureWith2Anchors(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/nok-sig-two-anchors.tlv"
-
 	KSI_Signature *sig = NULL;
 	int res;
 
-	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &sig);
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath("resource/tlv/nok-sig-two-anchors.tlv"), &sig);
 	CuAssert(tc, "Reading a signature with more than one trust anchor should result in format error.", res == KSI_INVALID_FORMAT && sig == NULL);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
 }
 
 static void testVerifyCalendarChainAlgoChange(CuTest *tc) {
-#define TEST_SIGNATURE_FILE "resource/tlv/cal_algo_switch.ksig"
-#define TEST_EXT_RESPONSE_FILE "resource/tlv/cal_algo_switch-extend_resposne.tlv"
-
 	int res;
+
 	unsigned char in[0x1ffff];
 	size_t in_len = 0;
 
@@ -507,7 +456,7 @@ static void testVerifyCalendarChainAlgoChange(CuTest *tc) {
 
 	KSI_ERR_clearErrors(ctx);
 
-	f = fopen(getFullResourcePath(TEST_SIGNATURE_FILE), "rb");
+	f = fopen(getFullResourcePath("resource/tlv/cal_algo_switch.ksig"), "rb");
 	CuAssert(tc, "Unable to open signature file.", f != NULL);
 
 	in_len = (unsigned)fread(in, 1, sizeof(in), f);
@@ -518,16 +467,12 @@ static void testVerifyCalendarChainAlgoChange(CuTest *tc) {
 	res = KSI_Signature_parse(ctx, in, in_len, &sig);
 	CuAssert(tc, "Failed to parse signature", res == KSI_OK && sig != NULL);
 
-	res = KSI_CTX_setExtender(ctx, getFullResourcePathUri(TEST_EXT_RESPONSE_FILE), TEST_USER, TEST_PASS);
-	CuAssert(tc, "Unable to set extender file URI.", res == KSI_OK);
+	KSITest_setFileMockResponse(tc, getFullResourcePath("resource/tlv/cal_algo_switch-extend_resposne.tlv"));
 
 	res = KSI_Signature_verifyOnline(sig, ctx);
 	CuAssert(tc, "Failed to verify valid document", res == KSI_OK);
 
 	KSI_Signature_free(sig);
-
-#undef TEST_SIGNATURE_FILE
-#undef TEST_EXT_RESPONSE_FILE
 }
 
 
@@ -538,6 +483,7 @@ CuSuite* KSITest_Signature_getSuite(void) {
 
 	SUITE_ADD_TEST(suite, testLoadSignatureFromFile);
 	SUITE_ADD_TEST(suite, testSignatureSigningTime);
+	SUITE_ADD_TEST(suite, testSignatureSigningTimeNoCalendarChain);
 	SUITE_ADD_TEST(suite, testSerializeSignature);
 	SUITE_ADD_TEST(suite, testVerifyDocument);
 	SUITE_ADD_TEST(suite, testVerifyDocumentHash);
