@@ -1,5 +1,6 @@
 Version 3.8
 
+* BUGFIX: Fixed KSI_Signature_getSigningTime() when signature does not containa calendar chain.
 * IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
 * IMPROVEMENT: Added detailed coverage report in html format.
 * BUGFIX: KSI_DataHasher memory leak on immediate reset after open.
